test/errors/scan_string_hex_escape.py
"\xzz"
"\x"
"\u12zz"
"\u123"
"\U0011000z"
